src/main/java/com/example/DiplomaSite/error/DiplomaThesisValidationException.java
package com.example.DiplomaSite.error;

public class DiplomaThesisValidationException extends RuntimeException{
    public DiplomaThesisValidationException(String message) {
        super(message);
    }
}
